--- a/game.html
+++ b/game.html
@@ -14,7 +14,8 @@
         
         function mainloop() {
             colorRect(0,0,canvas.width,canvas.height,'black'); // bg
-  
+            colorRect(0,0, 100, 100,'red'); // bg
+
         }
         
          function colorRect(x,y,w,h,c){
