--- a/game.html
+++ b/game.html
@@ -4,6 +4,14 @@
     <script>
         var canvas, canvasContext;
 
+        var playerXpos = 295;
+        var playerYpos = 590;
+        var playerSpeed = 5;
+        const PLAYER_SIZE = 10;
+
+
+
+
         window.onload = function() {
             canvas = document.getElementById('gameCanvas');
             canvasContext = canvas.getContext('2d');
@@ -14,7 +22,7 @@
         
         function mainloop() {
             colorRect(0,0,canvas.width,canvas.height,'black'); // bg
-            colorRect(0,0, 100, 100,'red'); // bg
+            colorRect(playerXpos,590, 10, 10,'red'); // bg
 
         }
         
