--- a/game.html
+++ b/game.html
@@ -4,13 +4,21 @@
     <script>
         var canvas, canvasContext;
 
+
+
         var playerXpos = 295;
         var playerYpos = 590;
         var playerSpeed = 5;
         const PLAYER_SIZE = 10;
 
 
+        const UP_KEY = 38;
+        const DOWN_KEY = 40;
+        const SPACE_KEY = 32;
 
+        var leftKeyPress = false;
+        var rightKeyPress = false;
+        var spaceKeyPress = false;
 
         window.onload = function() {
             canvas = document.getElementById('gameCanvas');
@@ -25,6 +33,7 @@
             colorRect(0,0,canvas.width,canvas.height,'black'); // bg
             colorRect(playerXpos,playerYpos, PLAYER_SIZE, PLAYER_SIZE,'red'); // bg
             playerMove();
+            console.log(keyboard.getKey)
         }
         
          function colorRect(x,y,w,h,c){
