use PLAYER_SIZE to adjust playerXpos and playerYpos to align the player in the bottom middle of the canvas

--- a/game.html
+++ b/game.html
@@ -6,11 +6,11 @@
         var canvas, canvasContext;
 
 
-
-        var playerXpos = 295;
-        var playerYpos = 590;
-        var playerSpeed = 5;
         const PLAYER_SIZE = 10;
+        var playerXpos = (600 - PLAYER_SIZE) / 2
+        var playerYpos = 600 - PLAYER_SIZE
+        var playerSpeed = 5;
+
 
 
         const UP_KEY = 38;
