create array for enemies

--- a/game.html
+++ b/game.html
@@ -16,6 +16,7 @@
         var enemyYpos = 250;
         var enemySpeed = 4;
 
+        var enemies = [];
 
         const UP_KEY = 38;
         const DOWN_KEY = 40;
