add object enemy with its properties in it

--- a/game.html
+++ b/game.html
@@ -89,6 +89,16 @@
             var enemyXpos = 500;
             var enemyYpos = Math.floor(Math.random()*(590-0)+0)
             var enemySpeed = 4;
+
+            var enemy = {
+                enemyXpos: enemyXpos,
+                enemyYpos: enemyYpos,
+                ENEMY_SIZE: ENEMY_SIZE,
+                enemySpeed: enemySpeed,
+                enemyColor: 'green'
+            }
+
+
         }
     </script>
 </body>
