when moving upwards, reset gravity to initial value (so next downwards movements aren't affected by previous ones)

--- a/game.html
+++ b/game.html
@@ -151,14 +151,14 @@
 
             function playerMove() {
                 if (upKeyPress == false && playerYpos <= canvas.height - PLAYER_SIZE) {
-                    playerYpos += playerSpeed;
+                    playerYpos -= playerSpeed;
 
                 }
 
 
                 if (upKeyPress == true && playerYpos > 0) {
                     playerYpos -= playerSpeed;
-
+                    gravity=0.5
                 }
 
             }
