--- a/game.html
+++ b/game.html
@@ -16,6 +16,11 @@
         var enemyYpos = Math.floor(Math.random() * (590 - 0) + 0)
         var enemySpeed = 4;
 
+                const BULLET_SIZE = 5;
+                var bulletXpos = playerXpos
+                var bulletYpos = playerYpos + PLAYER_SIZE/2
+                var bulletSpeed = 4;
+
         var totalEnemies = 5;
         var makingEnemies = true;
 
@@ -60,7 +65,7 @@
         function mainloop() {
             colorRect(0, 0, canvas.width, canvas.height, 'black');
             colorRect(playerXpos, playerYpos, PLAYER_SIZE, PLAYER_SIZE, 'red');
-            colorRect(0,0,10,10,'white')
+            colorRect(bulletXpos,bulletYpos,BULLET_SIZE,BULLET_SIZE,'white')
             document.addEventListener('keydown', keyPressed);
             document.addEventListener('keyup', keyReleased);
             playerMove();
