use a for loop to run makeBullets when i < totalBullets

--- a/game.html
+++ b/game.html
@@ -90,13 +90,13 @@
 
 
 
-            // if (makingEnemies == true) {
-            //     for (i = 0; i < totalEnemies; i++) {
+            if (makingEnemies == true) {
+                for (i = 0; i < totalEnemies; i++) {
                     makeBullets();
-            //     }
-            //     makingEnemies = false;
+                }
+                makingEnemies = false;
 
-            // }
+            }
 
 
             if (makingBullets == true) {
