remove undefined objects from bullets and enemies array

--- a/game.html
+++ b/game.html
@@ -191,7 +191,8 @@
 
                 })
 
-                
+                enemies = enemies.filter(item => item !== undefined); 
+                bullets = bullets.filter(item => item !== undefined); 
 
             })
 
