delete bullets going out of canvas

--- a/game.html
+++ b/game.html
@@ -150,7 +150,7 @@
 
             }
 
-            if(playerYpos > canvas.height - PLAYER_SIZE){
+            if (playerYpos > canvas.height - PLAYER_SIZE) {
                 playerYpos = canvas.height - PLAYER_SIZE
             }
 
@@ -178,23 +178,25 @@
 
         function bulletMove() {
             bullets.forEach(function (bullet, i, array) {
-                    bullet.bulletXpos += bullet.bulletSpeed
-                    if(bulletYpos > canvas.width){
-                        delete bullets [i]
-                    }
+                bullet.bulletXpos += bullet.bulletSpeed
+                if (bulletYpos > canvas.width) {
+                    delete bullets[i]
+                }
                 enemies.forEach(function (enemy, i, array) {
 
-                    if(enemy.enemyXpos < bullet.bulletXpos + bullet.BULLET_SIZE && enemy.enemyXpos + enemy.ENEMY_SIZE >
-                    bullet.bulletXpos && enemy.enemyYpos < bullet.bulletYpos + bullet.BULLET_SIZE && enemy.enemyYpos + enemy
-                    .ENEMY_SIZE > bullet.bulletYpos){
+                    if (enemy.enemyXpos < bullet.bulletXpos + bullet.BULLET_SIZE && enemy.enemyXpos +
+                        enemy.ENEMY_SIZE >
+                        bullet.bulletXpos && enemy.enemyYpos < bullet.bulletYpos + bullet.BULLET_SIZE &&
+                        enemy.enemyYpos + enemy
+                        .ENEMY_SIZE > bullet.bulletYpos) {
                         bullet.bulletYpos = canvas.width + 10;
-                        
+
                     }
 
                 })
 
-                enemies = enemies.filter(item => item !== undefined); 
-                bullets = bullets.filter(item => item !== undefined); 
+                enemies = enemies.filter(item => item !== undefined);
+                bullets = bullets.filter(item => item !== undefined);
 
             })
 
