--- a/game.html
+++ b/game.html
@@ -6,6 +6,9 @@
         var canvas, canvasContext;
 
 
+        var player = new Image();
+        player.src = "player.png"
+
         const PLAYER_SIZE = 10;
         var playerXpos = (600 - PLAYER_SIZE) / 2
         var playerYpos = 600 - PLAYER_SIZE
@@ -34,6 +37,7 @@
 
         var upKeyPress = false;
         var spaceKeyPress = false;
+
 
         window.onload = function () {
             canvas = document.getElementById('gameCanvas');
@@ -92,20 +96,15 @@
 
             if (makingEnemies == true) {
                 for (i = 0; i < totalEnemies; i++) {
-                    makeBullets();
-                }
-                makingEnemies = false; 
-
-            }
-
-
-            if (makingBullets == true) {
-                for (i = 0; i < totalBullets; i++) {
                     makeEnemies();
                 }
-                makingBullets = false;
+                makingEnemies = false;
 
             }
+
+
+
+
 
             drawEnemies();
             drawBullets();
@@ -117,6 +116,10 @@
             canvasContext.fillRect(x, y, w, h);
         }
 
+        function drawImg(src, x, y, w, h){
+            canvasContext.drawImage(src, x, y, w, h)
+        }
+
 
         function keyPressed(evt) {
 
@@ -125,6 +128,7 @@
             }
             if (evt.keyCode == SPACE_KEY) {
                 spaceKeyPress = true;
+                makeBullets();
             }
         }
 
@@ -141,9 +145,9 @@
         var gravity = 1;
 
         function playerMove() {
-            if (upKeyPress == false && playerYpos <= canvas.height - PLAYER_SIZE) {
+            if (upKeyPress == false && playerYpos < canvas.height - PLAYER_SIZE) {
                 playerYpos += gravity;
-                gravity += 0.5;
+                gravity += 0.4;
 
             }
 
@@ -152,6 +156,10 @@
                 playerYpos -= playerSpeed;
                 gravity = 0.5
 
+            }
+
+            if (playerYpos > canvas.height - PLAYER_SIZE) {
+                playerYpos = canvas.height - PLAYER_SIZE
             }
 
         }
@@ -169,20 +177,42 @@
                     playerXpos && enemy.enemyYpos < playerYpos + PLAYER_SIZE && enemy.enemyYpos + enemy
                     .ENEMY_SIZE > playerYpos) {
                     playerXpos = (600 - PLAYER_SIZE) / 2
+                    enemy.enemyXpos = canvas.width + 10;
                 }
             })
         }
+
+
 
 
         function bulletMove() {
             bullets.forEach(function (bullet, i, array) {
-                if (spaceKeyPress == true) {
-                    bullet.bulletXpos += bullet.bulletSpeed
+                bullet.bulletXpos += bullet.bulletSpeed
+                if (bulletYpos > canvas.width) {
+                    delete bullets[i]
                 }
+                enemies.forEach(function (enemy, i, array) {
+
+                    if (enemy.enemyXpos < bullet.bulletXpos + bullet.BULLET_SIZE && enemy.enemyXpos +
+                        enemy.ENEMY_SIZE >
+                        bullet.bulletXpos && enemy.enemyYpos < bullet.bulletYpos + bullet.BULLET_SIZE &&
+                        enemy.enemyYpos + enemy
+                        .ENEMY_SIZE > bullet.bulletYpos) {
+                        bullet.bulletYpos = canvas.width + 10;
+                        enemy.enemyXpos = canvas.width + 10;
+
+                    }
+
+                })
+
+                enemies = enemies.filter(item => item !== undefined);
+                bullets = bullets.filter(item => item !== undefined);
+
             })
 
 
         }
+
 
         function drawEnemies() {
             enemies.forEach(function (enemy, i) {
