--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
 
 
         var player = new Image();
-        player.src = "player.png"
+        player.src = "spritesheet.png"
 
         const PLAYER_SIZE = 80;
         var playerXpos = (600 - PLAYER_SIZE) / 2
@@ -116,8 +116,8 @@
             canvasContext.fillRect(x, y, w, h);
         }
 
-        function drawImg(src, x, y, w, h){
-            canvasContext.drawImage(src, x, y, w, h)
+        function drawImg(img, sX, sY, sW, sH, dX, dY, dW, dH){
+            canvasContext.drawImage(img, sX, sY, sW, sH, dX, dY, dW, dH)
         }
 
 
